# Transfer_Matrix_Method

./: CMakeLists.txt  README.md  input.yaml  main.cpp  run.sh
nk_lib/: Ag.txt  Air.txt  Si.txt  Si3N4.txt  SiO.txt
src/: CMakeLists.txt
src/manager/: CMakeLists.txt  jobManager.cpp  jobManager.h
src/optics/: CMakeLists.txt  tmmRun.cpp  tmmRun.h
src/structures/: inputStructure.h  material.h
